# Whisp

./: .gitignore  Features.md  README.md  Tasks.md  install-dev.sh  io.github.tanaybhomia.Whisp.yml  meson.build  run.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  flathub-release.yml
data/: io.github.tanaybhomia.Whisp.desktop.in  io.github.tanaybhomia.Whisp.metainfo.xml  meson.build  metadata.json
docs/: donate.html  index.html  manual.html
docs/css/: style.css
src/: meson.build  whisp.in
src/whisp/: __init__.py  config.py  editor.py  highlighter.py  main.py  text_search.py  window.py
